[package]
name = "zombiezen-sqlite"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Low-level, safe SQLite bindings"
repository = "https://github.com/zombiezen/rust-sqlite"
categories = ["api-bindings"]
keywords = ["SQLite"]

[features]
default = ["modern"]
modern = ["libsqlite3-sys/bundled_bindings"]
buildtime_bindgen = ["libsqlite3-sys/buildtime_bindgen"]

[dependencies]
bitflags = "2.4.0"
dashmap = "5.5.3"
lazy_static = "1.4.0"
libsqlite3-sys = "0.26.0"

[dev-dependencies]
zombiezen-const-cstr = "1.0.0"
